--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -147,10 +147,7 @@
         "id": "b-aVN4BGXmgs"
       },
       "source": [
-        "plt.imshow(screen)\n",
-        "# observation = env.reset()\n",
-        "# ipythondisplay.clear_output(wait=True)\n",
-        "# ipythondisplay.display(plt.gcf())"
+        "plt.imshow(screen)"
       ],
       "execution_count": null,
       "outputs": []
@@ -163,34 +160,6 @@
       "source": [
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "device"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cffjAnsrGGO9"
-      },
-      "source": [
-        "# pd = Display()\n",
-        "# pd.start()\n",
-        "\n",
-        "# directory = './video'\n",
-        "# env = gym.wrappers.Monitor('PushAndPull-Sokoban-v2', \"recording\",force=True)\n",
-        "# env.render(mode='human')\n",
-        "# env.reset()\n",
-        "# for _ in range(10):\n",
-        "#     action = env.action_space.sample()\n",
-        "#     #print(action)\n",
-        "#     state, reward, done, info = env.step(action) \n",
-        "#     screen = env.render(mode='rgb_array')\n",
-        "#     plt.imshow(screen)\n",
-        "#     ipythondisplay.clear_output(wait=True)\n",
-        "#     ipythondisplay.display(plt.gcf())\n",
-        "#     if done:\n",
-        "#         env.reset()\n",
-        "#         print('done')\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -226,16 +195,7 @@
         "id": "p5lzKoZwb-QH"
       },
       "source": [
-        "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
-        "# screen = env.render(mode='rgb_array')\n",
-        "# print(screen.shape)\n",
-        "# plt.imshow(screen)\n",
-        "# observation = env.reset()\n",
-        "# ipythondisplay.clear_output(wait=True)\n",
-        "# ipythondisplay.display(plt.gcf())\n",
-        "# env = gym.make('PushAndPull-Sokoban-v2').unwrapped\n",
-        "\n",
-        "\n"
+        "env = gym.make(\"PushAndPull-Sokoban-v2\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -324,53 +284,7 @@
         "    screen = env.render(mode='rgb_array')#.transpose((2, 0, 1))\n",
         "    #screen = color.rgb2gray(screen)\n",
         "    return resize(screen)\n",
-        "    \n",
-        "\n",
-        "\n",
-        "# plt.gray()\n",
-        "# plt.imshow(get_screen().cpu().squeeze(0).numpy())\n",
-        "# plt.show()\n",
-        "\n",
-        "\n",
-        "# env.reset()\n",
-        "# plt.figure()\n",
-        "# plt.imshow(get_screen().cpu().squeeze(0).permute(1, 2, 0).numpy(),\n",
-        "#            interpolation='none')\n",
-        "# plt.title('Example extracted screen')\n",
-        "# plt.show()\n",
-        "\n",
-        "# i2 = get_screen().permute(1,2,0)\n",
-        "\n",
-        "# plt.imshow(i2.numpy())\n",
-        "\n",
-        "#get_screen().permute(1,2,0).shape"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dSVV6fr1feIt"
-      },
-      "source": [
-        "# plt.figure()\n",
-        "# ii = get_screen().squeeze(0)\n",
-        "# ii.shape\n",
-        "# plt.imshow(ii.permute(1, 2, 0).numpy(),interpolation='none')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oCRTUzLZhJ3f"
-      },
-      "source": [
-        "# plt.gray()\n",
-        "# plt.imshow(ii.squeeze(0).numpy())\n",
-        "# plt.show()\n"
+        "    "
       ],
       "execution_count": null,
       "outputs": []
@@ -384,7 +298,7 @@
         "BATCH_SIZE = 32\n",
         "GAMMA = 0.9\n",
         "EPS_START = 1.0\n",
-        "EPS_END = 0.05\n",
+        "EPS_END = 0.1\n",
         "EPS_DECAY = 60000\n",
         "TARGET_UPDATE = 10\n",
         "\n",
@@ -405,7 +319,10 @@
         "\n",
         "#optimizer = optim.RMSprop(policy_net.parameters())\n",
         "optimizer = optim.Adam(policy_net.parameters(), lr=0.001)\n",
-        "\n"
+        "#torch.nn.SmoothL1Loss(size_average=None, reduce=None, reduction='mean', beta=1.0)\n",
+        "\n",
+        "\n",
+        "#torch.nn.HuberLoss(reduction='mean', delta=1.0)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -416,7 +333,7 @@
         "id": "WIpjRSxMl4FY"
       },
       "source": [
-        "init_screen.shape"
+        "criterion = nn.SmoothL1Loss(beta = 0.1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -453,24 +370,43 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "D2PMk6mCOxVZ"
+      },
+      "source": [
+        "torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "7UZDLE0tlwW_"
       },
       "source": [
-        "\n",
         "def select_action(state):\n",
-        "    global steps_done\n",
-        "    sample = random.random()\n",
-        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
-        "    steps_done += 1\n",
-        "    if sample > eps_threshold:\n",
-        "        with torch.no_grad():\n",
-        "            # t.max(1) will return largest column value of each row.\n",
-        "            # second column on max result is index of where max element was\n",
-        "            # found, so we pick action with the larger expected reward.\n",
-        "            return policy_net(state).max(1)[1].view(1, 1)\n",
-        "    else:\n",
-        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "    # global steps_done\n",
+        "    # sample = random.random()\n",
+        "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    # steps_done += 1\n",
+        "    # if sample > eps_threshold:\n",
+        "    #     with torch.no_grad():\n",
+        "    #         # t.max(1) will return largest column value of each row.\n",
+        "    #         # second column on max result is index of where max element was\n",
+        "    #         # found, so we pick action with the larger expected reward.\n",
+        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    # else:\n",
+        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
+        "\n",
+        "    vals = policy_net(state).detach().cpu().numpy().flatten()\n",
+        "    probs = vals/np.sum(vals)\n",
+        "\n",
+        "    action = np.random.choice(n_actions, 1, p=probs)[0]\n",
+        "\n",
+        "    return torch.tensor([[action]], device=device, dtype=torch.long)\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -500,17 +436,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jPIhfLYmvZf6"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "BJu43wD5ox-F"
       },
       "source": [
@@ -518,9 +443,7 @@
         "    if len(memory) < BATCH_SIZE:\n",
         "        return\n",
         "    transitions = memory.sample(BATCH_SIZE)\n",
-        "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
-        "    # detailed explanation). This converts batch-array of Transitions\n",
-        "    # to Transition of batch-arrays.\n",
+        "\n",
         "    batch = Transition(*zip(*transitions))\n",
         "\n",
         "    # Compute a mask of non-final states and concatenate the batch elements\n",
@@ -549,8 +472,10 @@
         "    expected_state_action_values = (next_state_values * GAMMA) + reward_batch\n",
         "\n",
         "    # Compute Huber loss\n",
-        "    criterion = nn.SmoothL1Loss()\n",
+        "    \n",
         "    loss = criterion(state_action_values, expected_state_action_values.unsqueeze(1))\n",
+        "    #print(state_action_values - expected_state_action_values.unsqueeze(1))\n",
+        "    \n",
         "\n",
         "    # Optimize the model\n",
         "    optimizer.zero_grad()\n",
@@ -571,7 +496,7 @@
         "num_episodes = 10000\n",
         "episode_durations = []\n",
         "steps_done = 0\n",
-        "memory = ReplayMemory(5000)\n",
+        "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
         "eps_to_actions = {}\n",
         "for i_episode in range(num_episodes):\n",
@@ -597,10 +522,10 @@
         "        next_state = get_screen().unsqueeze(0)\n",
         "\n",
         "        if not done:\n",
-        "          \n",
-        "            diff = torch.sum(next_state - state).detach().cpu().numpy().item()\n",
-        "            if diff == 0:\n",
-        "              reward = torch.tensor([-0.2], device=device)\n",
+        "          pass\n",
+        "            # diff = torch.sum(next_state - state).detach().cpu().numpy().item()\n",
+        "            # if diff == 0:\n",
+        "            #   reward = torch.tensor([-0.2], device=device)\n",
         "        else:\n",
         "            next_state = None\n",
         "            # #todo: remove\n",
@@ -640,7 +565,7 @@
         "id": "a7hyAIGM0AEB"
       },
       "source": [
-        "# i_episode,  episode_durations[-30: ]"
+        "steps_done"
       ],
       "execution_count": null,
       "outputs": []
@@ -712,19 +637,8 @@
       },
       "source": [
         "action = select_action(state)\n",
-        "action"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7ykF5grZYtNu"
-      },
-      "source": [
         "_, reward, done, _ = env.step(action.item())\n",
-        "reward"
+        "action, reward"
       ],
       "execution_count": null,
       "outputs": []
@@ -739,7 +653,8 @@
         "i2 = next_state.squeeze(0).squeeze(0) \n",
         "plt.gray()\n",
         "plt.imshow(i2)\n",
-        "plt.show()"
+        "plt.show()\n",
+        "state = next_state.unsqueeze(0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -750,8 +665,7 @@
         "id": "I1Z0PUBHxKJv"
       },
       "source": [
-        "action = select_action(state)\n",
-        "action"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -774,7 +688,8 @@
         "id": "5LWCgKZnxmJM"
       },
       "source": [
-        "policy_net(state)"
+        "x = policy_net(state)\n",
+        "x, torch.argmax(x)"
       ],
       "execution_count": null,
       "outputs": []
@@ -790,7 +705,7 @@
         "plt.gray()\n",
         "plt.imshow(i2)\n",
         "plt.show()\n",
-        "state = next_state"
+        "state = next_state.unsqueeze(0)"
       ],
       "execution_count": null,
       "outputs": []
