--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -373,8 +373,10 @@
         "id": "D2PMk6mCOxVZ"
       },
       "source": [
-        "torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
-        "torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n"
+        "# select_action(state)\n",
+        "# vals = policy_net(state).detach().cpu().numpy().flatten()\n",
+        "# min_vale = np.min(vals)\n",
+        "# min_vale, vals, vals + -min_vale + 0.0000001"
       ],
       "execution_count": null,
       "outputs": []
@@ -401,6 +403,11 @@
         "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
         "\n",
         "    vals = policy_net(state).detach().cpu().numpy().flatten()\n",
+        "    min_vale = np.min(vals)\n",
+        "    add = -min_vale + 0.0000001\n",
+        "    if min_vale < 0:\n",
+        "      vals += add\n",
+        "\n",
         "    probs = vals/np.sum(vals)\n",
         "\n",
         "    action = np.random.choice(n_actions, 1, p=probs)[0]\n",
