--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -505,6 +505,7 @@
         "steps_done = 0\n",
         "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
+        "target_net.eval()\n",
         "eps_to_actions = {}\n",
         "for i_episode in range(num_episodes):\n",
         "    episoe_states = []\n",
@@ -556,6 +557,7 @@
         "    # Update the target network, copying all weights and biases in DQN\n",
         "    if i_episode % TARGET_UPDATE == 0:\n",
         "        target_net.load_state_dict(policy_net.state_dict())\n",
+        "        target_net.eval()\n",
         "\n",
         "print('Complete')\n",
         "# env.render()\n",
@@ -569,10 +571,21 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "eH6MnfRSX54A"
+      },
+      "source": [
+        "len(episoe_states)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "a7hyAIGM0AEB"
       },
       "source": [
-        "steps_done"
+        "env.max_steps = 500"
       ],
       "execution_count": null,
       "outputs": []
