--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -124,19 +124,9 @@
       },
       "source": [
         "env = gym.make(\"PushAndPull-Sokoban-v2\")\n",
+        "env.max_steps =  500 \n",
         "screen = env.render(mode='rgb_array')\n",
-        "print(screen.shape)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hQ4QU1xYrzMX"
-      },
-      "source": [
-        "screen.shape"
+        "print(screen.shape)"
       ],
       "execution_count": null,
       "outputs": []
@@ -170,32 +160,10 @@
         "id": "Aym7pOFYYZFX"
       },
       "source": [
-        "from skimage import color\n",
-        "# img = color.rgb2gray(screen)\n",
-        "# plt.imshow(img)\n",
-        "screen.shape"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kloUZ8tHZdB7"
-      },
-      "source": [
-        "plt.imshow(screen)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p5lzKoZwb-QH"
-      },
-      "source": [
-        "env = gym.make(\"PushAndPull-Sokoban-v2\")"
+        "# from skimage import color\n",
+        "# # img = color.rgb2gray(screen)\n",
+        "# # plt.imshow(img)\n",
+        "# screen.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -281,8 +249,7 @@
         "\n",
         "\n",
         "def get_screen():\n",
-        "    screen = env.render(mode='rgb_array')#.transpose((2, 0, 1))\n",
-        "    #screen = color.rgb2gray(screen)\n",
+        "    screen = env.render(mode='rgb_array')\n",
         "    return resize(screen)\n",
         "    "
       ],
@@ -317,8 +284,9 @@
         "target_net.load_state_dict(policy_net.state_dict())\n",
         "target_net.eval()\n",
         "\n",
-        "#optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "optimizer = optim.Adam(policy_net.parameters(), lr=0.001)\n",
+        "optimizer = optim.RMSprop(policy_net.parameters())\n",
+        "criterion = nn.SmoothL1Loss() #beta=0.1\n",
+        "#optimizer = optim.Adam(policy_net.parameters(), lr=0.001)\n",
         "#torch.nn.SmoothL1Loss(size_average=None, reduce=None, reduction='mean', beta=1.0)\n",
         "\n",
         "\n",
@@ -333,7 +301,7 @@
         "id": "WIpjRSxMl4FY"
       },
       "source": [
-        "criterion = nn.SmoothL1Loss(beta = 0.1)"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -345,38 +313,24 @@
       },
       "source": [
         "\n",
-        "# steps_done += 10\n",
-        "# # # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
-        "# # # state = get_screen().unsqueeze(0)\n",
-        "# # # state.shape\n",
+        "# # steps_done += 10\n",
+        "# # # # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
+        "# # # # state = get_screen().unsqueeze(0)\n",
+        "# # # # state.shape\n",
         "\n",
-        "# # # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
+        "# # # # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
         "\n",
-        "# EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
+        "# # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
         "\n",
-        "# EPS_DECAY2 = 60000\n",
-        "prev = 1.0\n",
+        "# # EPS_DECAY2 = 60000\n",
+        "# prev = 1.0\n",
         "\n",
-        "for i in range(100000):\n",
-        "  eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
+        "# for i in range(100000):\n",
+        "#   eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
         "\n",
-        "  if prev - eps_threshold >= 0.1:\n",
-        "    print((i, eps_threshold))\n",
-        "    prev = eps_threshold"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "D2PMk6mCOxVZ"
-      },
-      "source": [
-        "# select_action(state)\n",
-        "# vals = policy_net(state).detach().cpu().numpy().flatten()\n",
-        "# min_vale = np.min(vals)\n",
-        "# min_vale, vals, vals + -min_vale + 0.0000001"
+        "#   if prev - eps_threshold >= 0.1:\n",
+        "#     print((i, eps_threshold))\n",
+        "#     prev = eps_threshold"
       ],
       "execution_count": null,
       "outputs": []
@@ -388,31 +342,19 @@
       },
       "source": [
         "def select_action(state):\n",
-        "    # global steps_done\n",
-        "    # sample = random.random()\n",
-        "    # eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
-        "    #     math.exp(-1. * steps_done / EPS_DECAY)\n",
-        "    # steps_done += 1\n",
-        "    # if sample > eps_threshold:\n",
-        "    #     with torch.no_grad():\n",
-        "    #         # t.max(1) will return largest column value of each row.\n",
-        "    #         # second column on max result is index of where max element was\n",
-        "    #         # found, so we pick action with the larger expected reward.\n",
-        "    #         return policy_net(state).max(1)[1].view(1, 1)\n",
-        "    # else:\n",
-        "    #     return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
-        "\n",
-        "    vals = policy_net(state).detach().cpu().numpy().flatten()\n",
-        "    min_vale = np.min(vals)\n",
-        "    add = -min_vale + 0.0000001\n",
-        "    if min_vale < 0:\n",
-        "      vals += add\n",
-        "\n",
-        "    probs = vals/np.sum(vals)\n",
-        "\n",
-        "    action = np.random.choice(n_actions, 1, p=probs)[0]\n",
-        "\n",
-        "    return torch.tensor([[action]], device=device, dtype=torch.long)\n",
+        "    global steps_done\n",
+        "    sample = random.random()\n",
+        "    eps_threshold = EPS_END + (EPS_START - EPS_END) * \\\n",
+        "        math.exp(-1. * steps_done / EPS_DECAY)\n",
+        "    steps_done += 1\n",
+        "    if sample > eps_threshold:\n",
+        "        with torch.no_grad():\n",
+        "            # t.max(1) will return largest column value of each row.\n",
+        "            # second column on max result is index of where max element was\n",
+        "            # found, so we pick action with the larger expected reward.\n",
+        "            return policy_net(state).max(1)[1].view(1, 1)\n",
+        "    else:\n",
+        "        return torch.tensor([[random.randrange(n_actions)]], device=device, dtype=torch.long)\n",
         "\n",
         "\n",
         "\n",
@@ -506,55 +448,59 @@
         "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
-        "eps_to_actions = {}\n",
-        "for i_episode in range(num_episodes):\n",
-        "    episoe_states = []\n",
-        "    eps_to_actions[i_episode] = []\n",
-        "    #print(i_episode)\n",
-        "    # Initialize the environment and state\n",
-        "    env.reset()\n",
-        "    #last_screen = get_screen().unsqueeze(0)\n",
-        "    state = get_screen().unsqueeze(0)\n",
-        "    # state = current_screen - last_screen\n",
-        "    for t in count():\n",
-        "        # Select and perform an action\n",
-        "        action = select_action(state)\n",
-        "        \n",
-        "        eps_to_actions[i_episode].append(action)\n",
-        "        _, reward, done, _ = env.step(action.item())\n",
-        "        episoe_states.append((state, reward))\n",
-        "        reward = torch.tensor([reward], device=device)\n",
+        "sarsa_k = 3\n",
         "\n",
-        "#         # Observe new state\n",
-        "#         last_screen = current_screen\n",
+        "\n",
+        "for i_episode in range(num_episodes):\n",
+        "    \n",
+        "    env.reset()\n",
+        "    state = get_screen().unsqueeze(0)\n",
+        "\n",
+        "    prev_states = []\n",
+        "    sarsa_k_states = []\n",
+        "    for t in count():\n",
+        "        action = select_action(state)\n",
+        "        _, reward, done, _ = env.step(action.item())\n",
+        "        reward = torch.tensor([reward], device=device)\n",
         "        next_state = get_screen().unsqueeze(0)\n",
         "\n",
         "        if not done:\n",
-        "          pass\n",
-        "            # diff = torch.sum(next_state - state).detach().cpu().numpy().item()\n",
-        "            # if diff == 0:\n",
-        "            #   reward = torch.tensor([-0.2], device=device)\n",
+        "          if sarsa_k == 1:\n",
+        "            memory.push(state, action, next_state, reward)\n",
+        "          else:\n",
+        "            sarsa_k_states_new = []\n",
+        "            for prev_state, prev_action, _, prev_rewards, prev_counter in sarsa_k_states:\n",
+        "              k_rewards = prev_rewards + reward\n",
+        "              counter = prev_counter +  1\n",
+        "\n",
+        "              if counter == sarsa_k:\n",
+        "                memory.push(prev_state, prev_action, next_state, k_rewards)\n",
+        "              else:\n",
+        "                sarsa_k_states_new.append((prev_state, prev_action, None, k_rewards, counter))\n",
+        "          \n",
+        "            sarsa_k_states_new.append((state, action, None, reward, 1))\n",
+        "            sarsa_k_states = sarsa_k_states_new\n",
+        "            sarsa_k_states_new = None\n",
         "        else:\n",
         "            next_state = None\n",
-        "            # #todo: remove\n",
-        "            # break\n",
         "\n",
-        "#         # Store the transition in memory\n",
-        "        memory.push(state, action, next_state, reward)\n",
+        "            for prev_state, prev_action, _, prev_rewards, prev_counter in sarsa_k_states:\n",
+        "              k_rewards = prev_rewards + reward\n",
+        "              memory.push(prev_state, prev_action, next_state, k_rewards)\n",
+        "            \n",
+        "            memory.push(state, action, next_state, reward)\n",
         "\n",
-        "#         # Move to the next state\n",
+        "      \n",
+        "\n",
         "        state = next_state\n",
         "\n",
-        "#         # Perform one step of the optimization (on the policy network)\n",
         "        optimize_model()\n",
+        "\n",
         "        if done:\n",
         "            episode_durations.append(t + 1)\n",
         "            #plot_durations()\n",
         "            break\n",
         "\n",
-        "  # #todo: remove\n",
-        "  #   break\n",
-        "    # Update the target network, copying all weights and biases in DQN\n",
         "    if i_episode % TARGET_UPDATE == 0:\n",
         "        target_net.load_state_dict(policy_net.state_dict())\n",
         "        target_net.eval()\n",
