--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -494,7 +494,8 @@
         "\n",
         "        state = next_state\n",
         "\n",
-        "        optimize_model()\n",
+        "        if steps_done % BATCH_SIZE == 0:\n",
+        "          optimize_model()\n",
         "\n",
         "        if done:\n",
         "            episode_durations.append(t + 1)\n",
