--- a/Project_SOKOBANchallenge.ipynb
+++ b/Project_SOKOBANchallenge.ipynb
@@ -309,35 +309,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_5xYU_YC1q6y"
-      },
-      "source": [
-        "\n",
-        "# # steps_done += 10\n",
-        "# # # # # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), steps_done, random.random()\n",
-        "# # # # state = get_screen().unsqueeze(0)\n",
-        "# # # # state.shape\n",
-        "\n",
-        "# # # # select_action(state), policy_net(state).max(1)[1].view(1, 1)\n",
-        "\n",
-        "# # EPS_END + (EPS_START - EPS_END) * math.exp(-1. * steps_done / EPS_DECAY), random.random()\n",
-        "\n",
-        "# # EPS_DECAY2 = 60000\n",
-        "# prev = 1.0\n",
-        "\n",
-        "# for i in range(100000):\n",
-        "#   eps_threshold = EPS_END + (EPS_START - EPS_END) * math.exp(-1. * i / EPS_DECAY)\n",
-        "\n",
-        "#   if prev - eps_threshold >= 0.1:\n",
-        "#     print((i, eps_threshold))\n",
-        "#     prev = eps_threshold"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "7UZDLE0tlwW_"
       },
       "source": [
@@ -494,7 +465,8 @@
         "\n",
         "        state = next_state\n",
         "\n",
-        "        optimize_model()\n",
+        "        if steps_done % BATCH_SIZE:\n",
+        "          optimize_model()\n",
         "\n",
         "        if done:\n",
         "            episode_durations.append(t + 1)\n",
