--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -220,7 +220,8 @@
         "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
         "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
         "        linear_input_size = convw * convh * 32\n",
-        "        self.head = nn.Linear(linear_input_size, outputs)\n",
+        "        self.adventage = nn.Linear(linear_input_size, outputs)\n",
+        "        self.val = nn.Linear(linear_input_size, 1)\n",
         "\n",
         "    # Called with either one element to determine next action, or a batch\n",
         "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
@@ -229,7 +230,12 @@
         "        x = F.relu(self.bn1(self.conv1(x)))\n",
         "        x = F.relu(self.bn2(self.conv2(x)))\n",
         "        x = F.relu(self.bn3(self.conv3(x)))\n",
-        "        return self.head(x.view(x.size(0), -1))"
+        "        x = x.view(x.size(0), -1)\n",
+        "\n",
+        "        val =  self.val(x)\n",
+        "        adv =  self.adventage(x)\n",
+        "\n",
+        "        return val + adv - adv.mean()"
       ],
       "execution_count": null,
       "outputs": []
