--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -206,7 +206,7 @@
         "\n",
         "    def __init__(self, h, w, outputs):\n",
         "        super(DQN, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(1, 16, kernel_size=5, stride=2)\n",
+        "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
         "        self.bn1 = nn.BatchNorm2d(16)\n",
         "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
         "        self.bn2 = nn.BatchNorm2d(32)\n",
@@ -235,7 +235,14 @@
         "        val =  self.val(x)\n",
         "        adv =  self.adventage(x)\n",
         "\n",
-        "        return val + adv - adv.mean()"
+        "        return val + adv - adv.mean()\n",
+        "  \n",
+        "    def init_weights(self):\n",
+        "      torch.nn.init.xavier_uniform(self.conv1.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.conv2.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.conv3.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.adventage.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.val.weight)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -246,18 +253,33 @@
         "id": "5g2E6ea0bZqa"
       },
       "source": [
-        "resize = T.Compose([\n",
-        "                    T.ToPILImage(),\n",
-        "                    T.Grayscale(num_output_channels=1),\n",
-        "                    T.Resize(80, interpolation=Image.CUBIC),\n",
-        "                    T.ToTensor()])\n",
+        "# resize = T.Compose([\n",
+        "#                     T.ToPILImage(),\n",
+        "#                     T.Grayscale(num_output_channels=1),\n",
+        "#                     T.Resize(80, interpolation=Image.CUBIC),\n",
+        "#                     T.ToTensor()])\n",
         "\n",
+        "resize = T.Compose([T.ToTensor()])\n",
         "\n",
         "\n",
         "def get_screen():\n",
         "    screen = env.render(mode='rgb_array')\n",
+        "    #return screen\n",
         "    return resize(screen)\n",
+        "\n",
+        "get_screen().shape\n",
         "    "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "giRoHq8qVD3S"
+      },
+      "source": [
+        "init_screen.shape"
       ],
       "execution_count": null,
       "outputs": []
@@ -285,18 +307,18 @@
         "# Get number of actions from gym action space\n",
         "n_actions = env.action_space.n\n",
         "\n",
-        "policy_net = DQN(screen_height, screen_width, n_actions).to(device)\n",
+        "policy_net = DQN(screen_height, screen_width, n_actions)\n",
+        "policy_net.init_weights()\n",
+        "policy_net.to(device)\n",
+        "\n",
         "target_net = DQN(screen_height, screen_width, n_actions).to(device)\n",
         "target_net.load_state_dict(policy_net.state_dict())\n",
         "target_net.eval()\n",
         "\n",
-        "optimizer = optim.RMSprop(policy_net.parameters())\n",
-        "criterion = nn.SmoothL1Loss() #beta=0.1\n",
-        "#optimizer = optim.Adam(policy_net.parameters(), lr=0.001)\n",
-        "#torch.nn.SmoothL1Loss(size_average=None, reduce=None, reduction='mean', beta=1.0)\n",
+        "# optimizer = optim.RMSprop(policy_net.parameters())\n",
+        "# criterion = nn.SmoothL1Loss() #beta=0.1\n",
         "\n",
-        "\n",
-        "#torch.nn.HuberLoss(reduction='mean', delta=1.0)\n"
+        "# screen_height, screen_width"
       ],
       "execution_count": null,
       "outputs": []
@@ -527,7 +549,7 @@
         "id": "eH6MnfRSX54A"
       },
       "source": [
-        "len(episoe_states)"
+        "i_episode"
       ],
       "execution_count": null,
       "outputs": []
@@ -584,6 +606,58 @@
       },
       "source": [
         "x = env.reset()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SWXp4npBWJ3G"
+      },
+      "source": [
+        "state = get_screen()\n",
+        "class X1(nn.Module):\n",
+        "\n",
+        "    def __init__(self, h, w, outputs):\n",
+        "        super(X1, self).__init__()\n",
+        "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
+        "        self.bn1 = nn.BatchNorm2d(16)\n",
+        "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
+        "        self.bn2 = nn.BatchNorm2d(32)\n",
+        "        self.conv3 = nn.Conv2d(32, 32, kernel_size=5, stride=2)\n",
+        "        self.bn3 = nn.BatchNorm2d(32)\n",
+        "\n",
+        "        # Number of Linear input connections depends on output of conv2d layers\n",
+        "        # and therefore the input image size, so compute it.\n",
+        "        def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
+        "            return (size - (kernel_size - 1) - 1) // stride  + 1\n",
+        "        \n",
+        "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
+        "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
+        "        linear_input_size = convw * convh * 32\n",
+        "        self.adventage = nn.Linear(linear_input_size, outputs)\n",
+        "        self.val = nn.Linear(linear_input_size, 1)\n",
+        "\n",
+        "    # Called with either one element to determine next action, or a batch\n",
+        "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
+        "    def forward(self, x):\n",
+        "        x = x.to(device)\n",
+        "        x = F.relu(self.bn1(self.conv1(x)))\n",
+        "        x = F.relu(self.bn2(self.conv2(x)))\n",
+        "        x = F.relu(self.bn3(self.conv3(x)))\n",
+        "        \n",
+        "        x = x.view(x.size(0), -1)\n",
+        "\n",
+        "        val =  self.val(x)\n",
+        "        adv =  self.adventage(x)\n",
+        "\n",
+        "        return val + adv - adv.mean()\n",
+        "\n",
+        "\n",
+        "\n",
+        "# X1(screen_height, screen_width, n_actions).to(device)(state.unsqueeze(0))\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
