--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -579,6 +579,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "1RzpP6dHACiv"
+      },
+      "source": [
+        "policy_net.val.weight"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "pWXgVl2rYLGb"
       },
       "source": [
@@ -613,66 +624,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SWXp4npBWJ3G"
-      },
-      "source": [
-        "state = get_screen()\n",
-        "class X1(nn.Module):\n",
-        "\n",
-        "    def __init__(self, h, w, outputs):\n",
-        "        super(X1, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
-        "        self.bn1 = nn.BatchNorm2d(16)\n",
-        "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
-        "        self.bn2 = nn.BatchNorm2d(32)\n",
-        "        self.conv3 = nn.Conv2d(32, 32, kernel_size=5, stride=2)\n",
-        "        self.bn3 = nn.BatchNorm2d(32)\n",
-        "\n",
-        "        # Number of Linear input connections depends on output of conv2d layers\n",
-        "        # and therefore the input image size, so compute it.\n",
-        "        def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
-        "            return (size - (kernel_size - 1) - 1) // stride  + 1\n",
-        "        \n",
-        "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
-        "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
-        "        linear_input_size = convw * convh * 32\n",
-        "        self.adventage = nn.Linear(linear_input_size, outputs)\n",
-        "        self.val = nn.Linear(linear_input_size, 1)\n",
-        "\n",
-        "    # Called with either one element to determine next action, or a batch\n",
-        "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
-        "    def forward(self, x):\n",
-        "        x = x.to(device)\n",
-        "        x = F.relu(self.bn1(self.conv1(x)))\n",
-        "        x = F.relu(self.bn2(self.conv2(x)))\n",
-        "        x = F.relu(self.bn3(self.conv3(x)))\n",
-        "        \n",
-        "        x = x.view(x.size(0), -1)\n",
-        "\n",
-        "        val =  self.val(x)\n",
-        "        adv =  self.adventage(x)\n",
-        "\n",
-        "        return val + adv - adv.mean()\n",
-        "\n",
-        "\n",
-        "\n",
-        "# X1(screen_height, screen_width, n_actions).to(device)(state.unsqueeze(0))\n",
-        "\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "NOl5Tinsw9PK"
       },
       "source": [
         "state = get_screen().unsqueeze(0)\n",
-        "i2 = state.squeeze(0).squeeze(0) #.permute(1,2,0)\n",
-        "plt.gray()\n",
-        "plt.imshow(i2)\n",
-        "plt.show()"
+        "i2 = state.squeeze(0).squeeze(0).permute(1,2,0)\n",
+        "# plt.gray()\n",
+        "# plt.imshow(i2)\n",
+        "# plt.show()\n",
+        "plt.imshow(i2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -697,10 +657,11 @@
       },
       "source": [
         "next_state = get_screen()\n",
-        "i2 = next_state.squeeze(0).squeeze(0) \n",
-        "plt.gray()\n",
+        "i2 = next_state.squeeze(0).squeeze(0).permute(1,2,0)\n",
+        "#plt.gray()\n",
+        "# plt.imshow(i2)\n",
+        "# plt.show()\n",
         "plt.imshow(i2)\n",
-        "plt.show()\n",
         "state = next_state.unsqueeze(0)"
       ],
       "execution_count": null,
