--- a/SOKOBAN_Dueling_DQN.ipynb
+++ b/SOKOBAN_Dueling_DQN.ipynb
@@ -206,43 +206,75 @@
         "\n",
         "    def __init__(self, h, w, outputs):\n",
         "        super(DQN, self).__init__()\n",
-        "        self.conv1 = nn.Conv2d(3, 16, kernel_size=5, stride=2)\n",
-        "        self.bn1 = nn.BatchNorm2d(16)\n",
-        "        self.conv2 = nn.Conv2d(16, 32, kernel_size=5, stride=2)\n",
-        "        self.bn2 = nn.BatchNorm2d(32)\n",
-        "        self.conv3 = nn.Conv2d(32, 32, kernel_size=5, stride=2)\n",
-        "        self.bn3 = nn.BatchNorm2d(32)\n",
+        "        self.conv1 = nn.Conv2d(3, 32, kernel_size=8, stride=4)\n",
+        "        #self.bn1 = nn.BatchNorm2d(16)\n",
+        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=4, stride=2)\n",
+        "        #self.bn2 = nn.BatchNorm2d(32)\n",
+        "        self.conv3 = nn.Conv2d(64, 64, kernel_size=3, stride=1)\n",
+        "        #self.bn3 = nn.BatchNorm2d(32)\n",
         "\n",
         "        # Number of Linear input connections depends on output of conv2d layers\n",
         "        # and therefore the input image size, so compute it.\n",
         "        def conv2d_size_out(size, kernel_size = 5, stride = 2):\n",
         "            return (size - (kernel_size - 1) - 1) // stride  + 1\n",
+        "\n",
         "        convw = conv2d_size_out(conv2d_size_out(conv2d_size_out(w)))\n",
         "        convh = conv2d_size_out(conv2d_size_out(conv2d_size_out(h)))\n",
         "        linear_input_size = convw * convh * 32\n",
-        "        self.adventage = nn.Linear(linear_input_size, outputs)\n",
-        "        self.val = nn.Linear(linear_input_size, 1)\n",
         "\n",
+        "        self.pre_adventage = nn.Linear(6400, 512)\n",
+        "        self.adventage = nn.Linear(512, outputs)\n",
+        "\n",
+        "        self.pre_val = nn.Linear(6400, 512)\n",
+        "        self.val = nn.Linear(512, 1)\n",
+        " \n",
         "    # Called with either one element to determine next action, or a batch\n",
         "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
         "    def forward(self, x):\n",
         "        x = x.to(device)\n",
-        "        x = F.relu(self.bn1(self.conv1(x)))\n",
-        "        x = F.relu(self.bn2(self.conv2(x)))\n",
-        "        x = F.relu(self.bn3(self.conv3(x)))\n",
+        "        # x = F.relu(self.bn1(self.conv1(x)))\n",
+        "        # x = F.relu(self.bn2(self.conv2(x)))\n",
+        "        # x = F.relu(self.bn3(self.conv3(x)))\n",
+        "        x = F.relu(self.conv1(x))\n",
+        "        x = F.relu(self.conv2(x))\n",
+        "        x = F.relu(self.conv3(x))\n",
         "        x = x.view(x.size(0), -1)\n",
         "\n",
-        "        val =  self.val(x)\n",
-        "        adv =  self.adventage(x)\n",
         "\n",
-        "        return val + adv - adv.mean()\n",
+        "       \n",
+        "\n",
+        "        value = F.relu(self.pre_val(x))\n",
+        "        value =  self.val(value)\n",
+        "\n",
+        "        adv = F.relu(self.pre_adventage(x))\n",
+        "\n",
+        "        adv =  self.adventage(adv)\n",
+        "\n",
+        "        return value + adv - adv.mean()\n",
         "  \n",
         "    def init_weights(self):\n",
         "      torch.nn.init.xavier_uniform(self.conv1.weight)\n",
         "      torch.nn.init.xavier_uniform(self.conv2.weight)\n",
         "      torch.nn.init.xavier_uniform(self.conv3.weight)\n",
         "      torch.nn.init.xavier_uniform(self.adventage.weight)\n",
-        "      torch.nn.init.xavier_uniform(self.val.weight)\n"
+        "      torch.nn.init.xavier_uniform(self.val.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.pre_adventage.weight)\n",
+        "      torch.nn.init.xavier_uniform(self.pre_val.weight)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QD9JHXWNXNi1"
+      },
+      "source": [
+        "policy_net = DQN(screen_height, screen_width, n_actions)\n",
+        "policy_net.init_weights()\n",
+        "policy_net.to(device)\n",
+        "\n",
+        "t = policy_net(state)"
       ],
       "execution_count": null,
       "outputs": []
@@ -476,7 +508,7 @@
         "memory = ReplayMemory(2500)\n",
         "policy_net.train()\n",
         "target_net.eval()\n",
-        "sarsa_k = 3\n",
+        "sarsa_k = 4\n",
         "\n",
         "\n",
         "for i_episode in range(num_episodes):\n",
@@ -550,6 +582,17 @@
       },
       "source": [
         "i_episode"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5f4F4N3UQotd"
+      },
+      "source": [
+        "sarsa_k_states[0][1]"
       ],
       "execution_count": null,
       "outputs": []
